--- a/index.html
+++ b/index.html
@@ -119,9 +119,12 @@
                 <h2><span class="sign-text">Sign-up for </span>Updates</h2>
                 <p>Stay updated on our latest product releases, be first to find out about upcoming sales, and get free
                     style tips from our blog. Unsubscribe at any time.</p>
-                <form action="submit.php" method="get" class="form-input">
-                    <input type="text" name="email" />
-                    <input type="submit" name="subscribe" value="subscribe" />
+            </div>
+
+            <div class="entire-form">
+                <form action="submit.php" method="get" class="form-container">
+                    <input type="text" name="email" placeholder="Your Email" class="email-container" />
+                    <input type="submit" name="subscribe" value="subscribe" class="button-container" />
                 </form>
             </div>
         </section>
