--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Aloha Apparel Co.</title>
+
+    <!-- cdn --->
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+
+
+    <!-- my css below  -->
     <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -18,10 +24,10 @@
         </div>
         <nav class="header-nav">
             <ul class="header-item">
-                <li><a href="">About</a></li>
-                <li><a href="">Shop</a></li>
-                <li><a href="">Featured</a></li>
-                <li><a href="">Updates</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#shop">Shop</a></li>
+                <li><a href="#featured">Featured</a></li>
+                <li><a href="#updates">Updates</a></li>
             </ul>
         </nav>
         <div class="icon header-item">
@@ -41,7 +47,7 @@
             <p>Aloha Apparel CO. sells only the finest ready-to-travel clothing. Browse our current selection of
                 products or sign up for updates below.</p>
         </section>
-        <section class="container category-container">
+        <section id="shop" class="shop container category-container">
             <div class="mens-category category-item">
                 <h3 class="mens-text">Men's</h3>
             </div>
@@ -65,56 +71,81 @@
 
         </section>
 
-        <section class="container carousel">
+        <section id="featured" class="featured container carousel">
             <h2><span class="most-loved">Most loved </span>Products</h2>
-            <nav>
-                <ul class="carousel-list">
-                    <li class="checked-dress carousel-item">
+
+            <div class="main-carousel">
+                <div class="carousel-cell">
+                    <img src="images/checked-stretch-dress.jpg">
+                </div>
+                <div class="carousel-cell">
+                    <img src="images/blue-hipster-backpack.jpg">
+                </div>
+                <div class="carousel-cell">
+                        <img src="images/demin-overall-shorts.jpg">
+                </div>
+                <div class="carousel-cell">
+                        <img src="images/pink-dotted-dress.jpg">
+                </div>
+                <div class="carousel-cell">
+                        <img src="images/blue-silk-dress.jpg">
+                </div>
+                <div class="carousel-cell">
+                        <img src="images/stretch-knit-dress.jpg">
+                </div>
+                <div class="carousel-cell">
+                        <img src="images/cotton-blue-shirt.jpg">
+                </div>
+                
+              </div>
+
+                <!-- <ul class="main-carousel">
+                    <li class="checked-dress carousel-cell">
                         <img src="images/checked-stretch-dress.jpg">
                         <p>DRESSES</p>
                         <h2>Checked Stretch Dress</h2>
                         <p>$129.00</p>
                     </li>
-                    <li class="backpack carousel-item">
+                    <li class="backpack carousel-cell">
                         <img src="images/blue-hipster-backpack.jpg">
                         <p>BAGS</p>
                         <h2>Blue Hipster Backpack</h2>
                         <p>$69.00</p>
                     </li>
-                    <li class="overalls carousel-item">
+                    <li class="overalls carousel-cell">
                         <img src="images/demin-overall-shorts.jpg">
                         <p>DENIM</p>
                         <h2>Denim Overall Shorts</h2>
                         <p>$89.00</p>
                     </li>
-                    <li class="pink-dress carousel-item">
+                    <li class="pink-dress carousel-cell">
                         <img src="images/pink-dotted-dress.jpg">
                         <p>DRESSES</p>
                         <h2>Pink Dotted Dress</h2>
                         <p>$99.00</p>
                     </li>
-                    <li class="blue-dress carousel-item">
+                    <li class="blue-dress carousel-cell">
                         <img src="images/blue-silk-dress.jpg">
                         <p>DRESSES</p>
                         <h2>Checked Stretch Dress</h2>
                         <p>$00.00</p>
                     </li>
-                    <li class="knit-dress carousel-item">
+                    <li class="knit-dress carousel-cell">
                         <img src="images/stretch-knit-dress.jpg">
                         <p>DRESSES</p>
                         <h2>Stretch Knit Dress</h2>
                         <p>$169.00</p>
                     </li>
-                    <li class="shirt carousel-item">
+                    <li class="shirt carousel-cell">
                         <img src="images/cotton-blue-shirt.jpg">
                         <p>SHIRTS</p>
                         <h2>Cotton Blue Shirt</h2>
                         <p>$89.00</p>
                     </li>
-                </ul>
-            </nav>
+                </ul> -->
+
         </section>
-        <section class="container subscription">
+        <section id="updates" class="updates container subscription">
             <div class="subscription-text">
                 <h2><span class="sign-text">Sign-up for </span>Updates</h2>
                 <p>Stay updated on our latest product releases, be first to find out about upcoming sales, and get free
@@ -124,13 +155,13 @@
             <div class="entire-form">
                 <form action="submit.php" method="get" class="form-container">
                     <input type="text" name="email" placeholder="Your Email" class="email-container" />
-                    <input type="submit" name="subscribe" value="subscribe" class="button-container" />
+                    <input type="submit" name="subscribe" value="Subscribe" class="button-container" />
                 </form>
             </div>
         </section>
     </main>
 
-    <footer>
+    <footer id="about" class="about">
         <div class="footer-detail footer-item">
             <h3>&copy; 2016 Aloha Apparel Co.<br />Powered by HTML and
                 CSS.<br /><br /><a href="tel:+6046046040">604-604-6040.</a><a
@@ -147,6 +178,9 @@
                 <li class="google"><a href="#"><i class="fab fa-google-plus-g"><span>Google</span></i></a></li>
             </ul>
         </nav>
+
+        <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+        <script src="./main.js"></script>
     </footer>
 </body>
 
