added hover effect/footer color

--- a/index.html
+++ b/index.html
@@ -72,34 +72,56 @@
         </section>
 
         <section id="featured" class="featured container carousel">
-            <h2><span class="most-loved">Most loved </span>Products</h2>
+            <h2 class="carousel-header-text"><span class="most-loved">Most loved </span><span
+                    class="products-text">Products</span></h2>
 
             <div class="main-carousel">
                 <div class="carousel-cell">
                     <img src="images/checked-stretch-dress.jpg">
+                    <p>DRESSES</p>
+                    <h2>Checked Stretch Dress</h2>
+                    <p>$129.00</p>
                 </div>
                 <div class="carousel-cell">
                     <img src="images/blue-hipster-backpack.jpg">
+                    <p>BAGS</p>
+                    <h2>Blue Hipster Backpack</h2>
+                    <p>$69.00</p>
                 </div>
                 <div class="carousel-cell">
-                        <img src="images/demin-overall-shorts.jpg">
+                    <img src="images/demin-overall-shorts.jpg">
+                    <p></p>
+                    <h2>Blue Hipster Backpack</h2>
+                    <p>$69.00</p>
                 </div>
                 <div class="carousel-cell">
-                        <img src="images/pink-dotted-dress.jpg">
+                    <img src="images/pink-dotted-dress.jpg">
+                    <p>BAGS</p>
+                    <h2>Blue Hipster Backpack</h2>
+                    <p>$69.00</p>
                 </div>
                 <div class="carousel-cell">
-                        <img src="images/blue-silk-dress.jpg">
+                    <img src="images/blue-silk-dress.jpg">
+                    <p>BAGS</p>
+                    <h2>Blue Hipster Backpack</h2>
+                    <p>$69.00</p>
                 </div>
                 <div class="carousel-cell">
-                        <img src="images/stretch-knit-dress.jpg">
+                    <img src="images/stretch-knit-dress.jpg">
+                    <p>BAGS</p>
+                    <h2>Blue Hipster Backpack</h2>
+                    <p>$69.00</p>
                 </div>
                 <div class="carousel-cell">
-                        <img src="images/cotton-blue-shirt.jpg">
+                    <img src="images/cotton-blue-shirt.jpg">
+                    <p>BAGS</p>
+                    <h2>Blue Hipster Backpack</h2>
+                    <p>$69.00</p>
                 </div>
-                
-              </div>
 
-                <!-- <ul class="main-carousel">
+            </div>
+
+            <!-- <ul class="main-carousel">
                     <li class="checked-dress carousel-cell">
                         <img src="images/checked-stretch-dress.jpg">
                         <p>DRESSES</p>
