adjusted header section/categories via media queries min width 600px

--- a/index.html
+++ b/index.html
@@ -68,12 +68,10 @@
             <div class="womens-category category-item">
                 <h3 class="womens-text">Women's</h3>
             </div>
-
         </section>
 
         <section id="featured" class="featured container carousel">
-            <h2 class="carousel-header-text"><span class="most-loved">Most loved </span><span
-                    class="products-text">Products</span></h2>
+            <h2 class="carousel-header-text"><span class="most-loved">Most loved </span><span class="products-text">Products</span></h2>
 
             <div class="main-carousel">
                 <div class="carousel-cell">
@@ -90,33 +88,33 @@
                 </div>
                 <div class="carousel-cell">
                     <img src="images/demin-overall-shorts.jpg">
-                    <p></p>
-                    <h2>Blue Hipster Backpack</h2>
-                    <p>$69.00</p>
+                    <p>DENIM</p>
+                    <h2>Denim Overall Shorts</h2>
+                    <p>$89.00</p>
                 </div>
                 <div class="carousel-cell">
                     <img src="images/pink-dotted-dress.jpg">
-                    <p>BAGS</p>
-                    <h2>Blue Hipster Backpack</h2>
-                    <p>$69.00</p>
+                    <p>DRESSES</p>
+                    <h2>Pink Dotted Dress</h2>
+                    <p>$99.00</p>
                 </div>
                 <div class="carousel-cell">
                     <img src="images/blue-silk-dress.jpg">
-                    <p>BAGS</p>
-                    <h2>Blue Hipster Backpack</h2>
-                    <p>$69.00</p>
+                    <p>DRESSES</p>
+                    <h2>Blue Silk Dress</h2>
+                    <p>$89.00</p>
                 </div>
                 <div class="carousel-cell">
                     <img src="images/stretch-knit-dress.jpg">
-                    <p>BAGS</p>
-                    <h2>Blue Hipster Backpack</h2>
-                    <p>$69.00</p>
+                    <p>DRESSES</p>
+                    <h2>Stretch Knit Dress</h2>
+                    <p>$169.00</p>
                 </div>
                 <div class="carousel-cell">
                     <img src="images/cotton-blue-shirt.jpg">
-                    <p>BAGS</p>
-                    <h2>Blue Hipster Backpack</h2>
-                    <p>$69.00</p>
+                    <p>SHIRTS</p>
+                    <h2>Cotton Blue Shirt</h2>
+                    <p>$39.00</p>
                 </div>
 
             </div>
@@ -169,7 +167,7 @@
         </section>
         <section id="updates" class="updates container subscription">
             <div class="subscription-text">
-                <h2><span class="sign-text">Sign-up for </span>Updates</h2>
+                <h2><span class="sign-text">Sign-up for </span><span class="update-text">Updates</span></h2>
                 <p>Stay updated on our latest product releases, be first to find out about upcoming sales, and get free
                     style tips from our blog. Unsubscribe at any time.</p>
             </div>
@@ -193,11 +191,11 @@
         </div>
         <nav class="footer-nav footer-item">
             <ul class="social-media">
-                <li class="facebook"><a href="#"><i class="fab fa-facebook-f"><span>Facebook</span></i></a></li>
-                <li class="twitter"><a href="#"><i class="fab fa-twitter"><span>Twitter</span></i></a></li>
-                <li class="instagram"><a href="#"><i class="fab fa-instagram"><span>Instagram</span></i></li>
-                <li class="pinterest"><a href="#"><i class="fab fa-pinterest"><span>Pinterest</span></i></a></li>
-                <li class="google"><a href="#"><i class="fab fa-google-plus-g"><span>Google</span></i></a></li>
+                <li class="facebook"><a href="#"><i class="fab fa-facebook-f fa-lg"><span>Facebook</span></i></a></li>
+                <li class="twitter"><a href="#"><i class="fab fa-twitter fa-lg"><span>Twitter</span></i></a></li>
+                <li class="instagram"><a href="#"><i class="fab fa-instagram fa-lg"><span>Instagram</span></i></li>
+                <li class="pinterest"><a href="#"><i class="fab fa-pinterest fa-lg"><span>Pinterest</span></i></a></li>
+                <li class="google"><a href="#"><i class="fab fa-google-plus-g fa-lg"><span>Google</span></i></a></li>
             </ul>
         </nav>
 
