modified tablet version/ still working carousel

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         </section>
 
         <section id="featured" class="featured container carousel">
-            <h2 class="carousel-header-text"><span class="most-loved">Most loved </span><span class="products-text">Products</span></h2>
+            <h2 class="carousel-header-text"><span class="most-loved">Most loved </span><span
+                    class="products-text">Products</span></h2>
 
             <div class="main-carousel">
                 <div class="carousel-cell">
@@ -191,14 +192,44 @@
         </div>
         <nav class="footer-nav footer-item">
             <ul class="social-media">
-                <li class="facebook"><a href="#"><i class="fab fa-facebook-f fa-lg"><span>Facebook</span></i></a></li>
-                <li class="twitter"><a href="#"><i class="fab fa-twitter fa-lg"><span>Twitter</span></i></a></li>
-                <li class="instagram"><a href="#"><i class="fab fa-instagram fa-lg"><span>Instagram</span></i></li>
-                <li class="pinterest"><a href="#"><i class="fab fa-pinterest fa-lg"><span>Pinterest</span></i></a></li>
-                <li class="google"><a href="#"><i class="fab fa-google-plus-g fa-lg"><span>Google</span></i></a></li>
+                <li class="facebook">
+                    <a href="#">
+                        <i class="fab fa-facebook-f fa-lg">
+                                <span>Facebook</span>
+                        </i>
+                    </a>
+                </li>
+                <li class="twitter">
+                    <a href="#">
+                        <i class="fab fa-twitter fa-lg">
+                            <span>Twitter</span>
+                        </i>
+                    </a>
+                </li>
+                <li class="instagram">
+                    <a href="#">
+                        <i class="fab fa-instagram fa-lg"></i>
+                            <span>Instagram</span>
+                        </i>
+                    </a>
+                </li>
+                <li class="pinterest">
+                    <a href="#">
+                        <i class="fab fa-pinterest fa-lg"></i>
+                            <span>Pinterest</span>
+                        </i>
+                    </a>
+                </li>
+                <li class="google">
+                    <a href="#">
+                        <i class="fab fa-google-plus-g fa-lg">
+                            <span>Google</span>
+                        </i>
+                    </a>
+                </li>
+
             </ul>
         </nav>
-
         <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
         <script src="./main.js"></script>
     </footer>
