--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <!-- Header Section -->
     <header class="container header">
         <div class="logo header-item">
             <img src="images/aloha-logo.svg">
@@ -34,6 +35,7 @@
         </div>
     </header>
 
+    <!-- Main Section. From Banner to Subscription -->
     <main>
         <section class="banner">
             <div class="banner-text">
@@ -134,6 +136,7 @@
         </section>
     </main>
 
+    <!-- Footer Section -->
     <footer id="about" class="about">
         <div class="footer-detail footer-item">
             <h3>&copy; 2016 Aloha Apparel Co.<br />Powered by HTML and
