Finished product// Tried working on Email validation via StackOverflow.

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
             </div>
 
             <div class="entire-form">
-                <form action="submit.php" method="get" class="form-container">
-                    <input type="text" name="email" placeholder="Your Email" class="email-container" />
+                <form class="form-container">
+                    <input type="text" name="email" placeholder="Your Email" class="email-container" id="email-container"/>
                     <input type="submit" name="subscribe" value="Subscribe" class="button-container" />
                 </form>
             </div>
